# koifish

./: .gitignore  CMakeLists.txt  Datasets  LICENSE  README.md  _koifish_tmp_config_.json
Fuzi/: Distillation.cpp
cases/: PlotSweep.py  SweepHyParams.py  batch_test.py  gpt2_124M.json  gpt2_1558M.json  gpt2_774M.json  loss_curve.py  test_lite.py  tutorial_gpt2.md  tutorial_gpt2_1558M.md
cases/gpt2/: gpt2.json  gpt2.py  gpt2_124M.json  gpt2_1558M.json  gpt2_774M.json  gpt_124M.json  gpt_774M.json
cases/gpt2/10B_tokens/774M_Shard50_F6_B80/: F6_B80.json
cases/gpt2/10B_tokens/F6_B80/: F6_B80.json  GPT2_fuyou.fish.json
cases/gpt2/124M_shard50_F6_lr0.001/: Eval.csv  F6_lr0.001.info  F6_lr0.001.json  no_fuyou.json
cases/gpt2/1558M_F8_B80/: Eval.csv  F8_B32.json  F8_B40.json  F8_B80.info  F8_B80.json
cases/gpt2/774M_Shard50_F6_B80/: Eval.csv  F6_B80.info  F6_B80.json  F9_B40.json
cases/gpt2/F6_B80/: F6_B80.json
cases/qwen3/: R_0120_adamw.info  qwen25_0.5B.json  qwen25_1.json  qwen3_0.6B.json  qwen3_1.json  qwen3_4B.json  qwen3_596M_q4.json  qwen3_ising.json
cases/tricks/: Tricks.md  WeightTying.md
cases/tutorial/: history.md  tutorial_gpt2.md  tutorial_gpt2_1558M.md  tutorial_qwen3.md  tutorial_sft.md
cases/tutorial/124M_LR0.002/: F-2_lr0.002.json
hy-tmp/: _koifish_tmp_config_.json
lenda/SpMV/: CMakeLists.txt  Filter.cpp  GVMAT.h  Matrix.cpp  Pattern.cpp
lenda/kernel/: CMakeLists.txt  OptimalBrain.cpp  OptimalBrain.hpp
lenda/util/: GST_bmp.cpp  GST_bmp_1.cpp  GST_util.cpp  IO_g.cpp  IO_g.hpp
llama.cpp/: CMakeLists.txt
llama.cpp/ggml/include/: ggml.h
llama.cpp/ggml/src/: ggml-alloc.c  ggml-backend.c  ggml-cuda.cu  ggml.c
llama.cpp/ggml/src/ggml-cpu/: ggml-cpu.c
llama.cpp/ggml/src/ggml-cuda/: norm.cu  ssm_conv.cu  ssm_conv.cuh  ssm_scan.cu  ssm_scan.cuh
llama.cpp/include/: llama.h
llama.cpp/spm-headers/: ggml.h
llama.cpp/src/: llama.cpp  llama_cys.inc
log/: @[._checkpoints_._koifish_state_.ckp].json
py-models/: PreTokenizer.py
src/: CLI_params.hpp  GG_params.hpp  PackedQ.hpp  bubble.cpp  catfish.cpp  g_def_x.hpp  g_float.hpp  g_float_cpu.hpp  g_stddef.hpp  koifish.cpp  pangpi.cpp  pybind11
src/Device/: CMakeLists.txt  EDevice.cpp  EDevice.hpp  E_GPU.cpp  GPT2.cu  Pipe.cpp  Pipe.hpp  SelfAttention.cpp  cuEnv.cu  cuOptimize.cu  cuTensor.cu  cutils.cuh
src/Device/CUDA/: Activation.cu  CMakeLists.txt  Distill.cu  EDevice.hpp  E_GPU.cpp  GPT2.cu  Generate.cu  NeuronFuse.cu  Operator.cuh  Optimizer.cu  QKV.cu  T.cu  Transformer.cu  cuFuse.cu  cuOptimize.cu  cuTensor.cu  cublas_common.h  cuda_common.h  cuda_def.hpp  cuda_utils.cuh  encoder.cuh  huTensor.cu  qwen_v0.cuh
src/Device/CUDA/DeepGEMM/: test.cu
src/Device/CUDA/kernel/: gemm.cu  (+19 more)
src/Device/hwinfo/: CMakeLists.txt
src/Device/tile_kernel/: flash_bwd.cubin  gemm_v0.cu  header_cls.cu  qkv_v0.cu  tl_kernels.hpp  utils.cu
src/Fuzi/: CMakeLists.txt  Distillation.cpp  Distillation.hpp
src/GBDT/: CMakeLists.txt  LiteMORT.cpp
src/GBDT/EDA/: Feat_Selection.cpp  Feat_Selection.hpp  SA_salp.cpp  SA_salp.hpp
src/GBDT/data_fold/: Binfold.cpp  DataFold.cpp  DataFold.hpp  Distribution.hpp  EDA.cpp  EDA.hpp  FeatVec_Quanti.hpp  FeatVector.cpp  FeatVector.hpp  Histogram.cpp  Histogram.hpp  Loss.hpp
src/GBDT/include/: LiteBOM_config.h
src/GBDT/learn/: DCRIMI_.cpp  DCRIMI_.hpp  LOSS.cpp  Pruning.cpp
src/GBDT/python/: pyMORT_DLL.cpp  pyMORT_DLL.h
src/GBDT/tree/: BiSplit.cpp  BiSplit.hpp  BoostingForest.cpp  BoostingForest.hpp  GBRT.cpp  GBRT.hpp  ManifoldTree.cpp  ManifoldTree.hpp
src/GBDT/util/: BLAS_t.cpp  FeatData.cpp  Float16.hpp  GST_def.h  Object.hpp  csv.h  samp_set.hpp
src/Manifold/: Attention.cpp  CMakeLists.txt  Cache.cpp  Cache.hpp  DataLoader.cpp  DataLoader.hpp  Dictionary.cpp  Dictionary.hpp  EmbedVAE.cpp  Evaluate.cpp  Fish.cpp  Fish.hpp  GPT.cpp  GPT.hpp  Ganglia.hpp  GoPT.cpp  GoPT.hpp  Gradient.cpp  HotPicker.hpp  MoE.cpp  Neuron.cpp  Neuron.hpp  Optimizer.cpp  Optimizer.hpp  SAM.hpp  SLP.hpp  Salp.cpp  Scheduler.cpp  Scheduler.hpp  Serial.hpp  Serialize.cpp  Serialize.hpp  SparseNeuron.cpp  TGraph.cpp  TGraph.hpp  TokenSet.cpp  TokenSet.hpp  Transformer.cpp  VAE.hpp  WIKI.hpp  (+6 more)
src/Models/: CMakeLists.txt  DeepSeek.cpp  QWen.cpp  SAM.hpp
src/Python/: PreTokenizer.py  eval_lite.py  lm_eval_.py  lm_sft.py  lm_tile_kernels.py  lm_ton_kernels.py  lm_utils.py  some_utils.py  test_awq.py
src/Python/tile_wrapper/: __init__.py  tl_autotune.py  tl_gemm.py  tl_header.py  tl_norm.py  tl_qkv.py  tl_utils.py
src/Python/triton_wrapper/: ton_qkv.py
src/Tensor/: CMakeLists.txt  GTensor.cpp  GTensor.hpp  GeQuant.cpp  GeQuant.hpp  Packed.hpp  Safetensors.cpp  Safetensors.hpp  Tile.hpp  safetensors.hh
src/TokenSet/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  Dictionary.cpp  Dictionary.hpp  TokenSet.cpp  TokenSet.hpp  tiktoken.h  unordered_dense.h
src/Utils/: BLAS_t.cpp  BLAS_t.hpp  CLI_params.cpp  CMakeLists.txt  Cache.cpp  Cache.hpp  GST_Application.cpp  GST_Application.hpp  GST_MD5.cpp  GST_MemBuffer.cpp  GST_MemBuffer.hpp  GST_bmp.cpp  GST_bmp.hpp  GST_bmp_1.cpp  GST_dataset.cpp  GST_float.cpp  GST_log.hpp  GST_obj.hpp  GST_os.hpp  GST_rander.cpp  GST_rander.hpp  GST_util.cpp  GST_util.hpp  IO_g.cpp  IO_g.hpp  cJSON.h  pybind_util.cpp  rapidhash.h
src/ggex/: CMakeLists.txt  GG_util.cpp  GG_util.hpp  GTensor.cpp  GTensor.hpp  WIKI.hpp  common-ggml.cpp  common-ggml.h  common_sample.cpp  common_sample.h  gg_backward.c  json.hpp  llama_cys.inc  llmc_rand.h  llmc_utils.h  pybind_util.cpp  stb_image.h  stb_image_write.h  tutor.cpp
src/kGPT/: 3.sh  Makefile  train_gpt2.c  train_gpt2.cpp  train_gpt2.cu
src/kGPT/llmc/: cublas_common.h  gelu.cuh  layernorm.cuh  matmul.cuh  rand.h
src/lenda/Cheby/: CMakeLists.txt  ChebTools.cpp  ChebTools.h  roots.h
src/lenda/SpMV/: Filter.cpp  Filter.hpp  GVMAT.cpp  GVMAT.h  GVMAT_t.hpp  GeQuant.hpp  Matrix.cpp  Matrix.hpp  Pattern.cpp  Pattern.h
src/lenda/kernel/: OptimalBrain.hpp  SVD.hpp  SVD_r.cpp
src/lenda/util/: BLAS_t.cpp  BLAS_t.hpp  CMakeLists.txt  GST_bmp.cpp  GST_bmp.hpp  GST_dataset.cpp  GST_util.cpp  GST_util.hpp
(+69 files in other folders)
